@@ -1,3 +1,12 @@
+2007-11-15  Bastien Nocera  <hadess@hadess.net>
+
+	* telepathy/connection-manager.c:
+	(phoney_connection_manager_get_phoney_connection),
+	(_phoney_connection_manager_new_connection):
+	Fix stupidness in _get_phoney_connection, error out when
+	asked to create a connection for which we already handle the
+	bluetooth address
+
 2007-11-14  Bastien Nocera  <hadess@hadess.net>
 
 	* src/gnome-phone-manager.desktop.in: Remove unneeded Encoding key
